05 header spacing fixed

--- a/Foundations/css-exercises/foundations/flex/05-flex-modal/style.css
+++ b/Foundations/css-exercises/foundations/flex/05-flex-modal/style.css
@@ -61,7 +61,7 @@ body {
   justify-content: space-between;
   font-size: 20px;
   font-weight: 700;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
   
 }
 
